fixed button overlap on admin UI Book page for desktop and mobile view - includes non-admin UI Book page for mobile view

--- a/src/Components/adminComponents/book_Admin_folder/BookAdmin.css
+++ b/src/Components/adminComponents/book_Admin_folder/BookAdmin.css
@@ -1,15 +1,78 @@
+.book-page-cover-wrapper {
+    margin-top: 64px;
+    padding-top: 40px;
+    display: flex;
+}
+
+.book-page-cover-wrapper__left-col {
+    flex-basis: 50%;
+}
+
+.book-page-cover-wrapper__left-col img {
+    max-width: 380px;
+    padding-left: 60px;
+}
+
+.book-page-cover-wrapper__right-col {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 50%;
+}
+
+.book-page-cover-wrapper__right-col h1 {
+    font-family: 'Inter';
+    font-weight: 700;
+    font-style: italic;
+    margin: 0;
+}
+
+.book-page-cover-wrapper__right-col p {
+    font-weight: 700;
+    white-space: pre-line;
+}
+
+.book-page-cover-wrapper__right-col-publisher {
+    margin-top: 0px;
+}
+
+.book-page-cover-wrapper__right-col-awards {
+    margin: 0px;
+}
+
+.book-page-cover-wrapper__right-col-short-text {
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.book-page-body-wrapper {
+    width: 100%;
+}
+
+.book-page-body-wrapper__h2-header {
+    padding-top: 60px;
+    margin-left: 60px;
+    margin-right: 60px;
+}
+
+.book-page-body-wrapper__text {
+    font-weight: 400;
+    margin-left: 60px;
+    margin-right: 60px;
+    padding-bottom: 10px;
+}
+
+.book-page-body-wrapper__bold-text {
+    font-weight: 700;
+}
+
+
 .bookAdminOuter{
     margin-top: 64px;
     padding-top: 20px;
 }
 .main-body-top {
-    /* display: grid;
-    grid-template-columns: 1fr 1fr; */
-    /* display: block; */
     margin-top: 64px;
     padding-top: 40px;
-    /* height: 60%; */
-    background-color: red;
 }
 
 .body-col-left {
@@ -29,7 +92,6 @@
 
 .body-col-right {
     height: 100%;
-    background-color: green;
 }
 
 .body-col-right h1 {
@@ -231,19 +293,44 @@
     border-style: none;
 }
 
-
 @media (max-width: 480px) {
-    .main-body-top {
+    .book-page-cover-wrapper {
+        margin-top: 64px;
+        padding-top: 40px;
+        display: block;
+    }
+
+    .book-page-cover-wrapper__left-col {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 40px;
+    }
+
+    .book-page-cover-wrapper__left-col img {
+        max-width: 200px;
+        padding-left: 0px;
+    }
+
+    .book-page-cover-wrapper__right-col {
         display: flex;
         flex-direction: column;
-        margin-top: 32px;
-        height: 60%;
+        flex-basis: 100%;
+        display: block;
     }
 
-    .bookcover-img {
-        width: 80%;
-        height: auto;
-        padding-top: 20px;
-        padding-bottom: 20px;
+    .book-page-body-wrapper__h2-header {
+        padding-top: 30px;
+        margin-left: 0px;
+        margin-right: 0px;
     }
+
+    .book-page-body-wrapper__text {
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+
+    button {
+        height: 60px;
+    }
+    
 }
